# internship_si_2018

./: CMakeLists.txt  README.md  SiDetPhant.cc  TODO  config.ini  run2nancy.mac
include/: ActionInitialization.hh  DetectorCollect.hh  DetectorConstruction.hh  EventAction.hh  FluenceEnergyDistributionHit.hh  FluenceEnergyDistributionSD.hh  NestedPhantomParameterisation.hh  PhysicsList.cc  PhysicsList.hh  PhysicsList.icc  PiotPhaseSpace.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  Run.hh  RunAction.hh  SDCollect.hh  ThermalNeutronScattering.hh  config.h
inputs/: Binning.ebin  config.ini  configbinning.ini
macros/: plot.mac  run1.mac  run1nancy.mac  run1nancylight.mac  run2nancy.mac  run2nancy2.mac  run2nancylight.mac  runbeamsensor.mac  runconephantom.mac  runconesmall.mac  vis.mac
macros/for cone 50 cm distance souce phantom/: config.ini  run2nancy.mac
scripts/: random.sh  runSOPB.sh  singleSOBP.sh
second v/: DetectorConstruction2.cc
src/: ActionInitialization.cc  DetectorCollect.cc  DetectorConstruction.cc  DetectorConstruction.cc.autosave  EventAction.cc  FluenceEnergyDistributionHit.cc  FluenceEnergyDistributionSD.cc  NestedPhantomParameterisation.cc  PhysicsList.cc  PiotPhaseSpace.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  Run.cc  RunAction.cc  SDCollect.cc  ThermalNeutronScattering.cc  config.cc
